crates/polaris_tools/tests/compile_fail/tool_namevalue_form.rs
use polaris_tools::{ToolError, toolset};

struct FileTools;

#[toolset]
impl FileTools {
    #[tool = false]
    /// `#[tool]` takes options in `#[tool(strict = false)]` form, not name-value.
    async fn bad(&self, path: String) -> Result<String, ToolError> {
        Ok(path)
    }
}

fn main() {}
